@@ -1,7 +1,7 @@
 /*
     Data2Text.h - conversion of commandBlock entries to text
 
-    Copyright 2019 Will Godfrey
+    Copyright 2019-2020 Will Godfrey
 
     This file is part of yoshimi, which is free software: you can redistribute
     it and/or modify it under the terms of the GNU Library General Public
@@ -50,6 +50,7 @@ class DataText
         std::string resolveConfig(CommandBlock *getData, bool addValue);
         std::string resolveBank(CommandBlock *getData, bool addValue);
         std::string resolveMain(CommandBlock *getData, bool addValue);
+        std::string resolveAftertouch(bool type, int value, bool addValue);
         std::string resolvePart(CommandBlock *getData, bool addValue);
         std::string resolveAdd(CommandBlock *getData, bool addValue);
         std::string resolveAddVoice(CommandBlock *getData, bool addValue);
